Using DrawerLayout for image controls

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -29,4 +29,12 @@
         <item>Polynesian</item>
         <item>Gradient</item>
     </string-array>
+
+    <string-array name="images">
+        <item>None</item>
+        <item>Cinderella Castle</item>
+        <item>Wilderness Lodge</item>
+        <item>Polynesian</item>
+        <item>Gradient</item>
+    </string-array>
 </resources>
