--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="default_icon_size">24dp</dimen>
     <dimen name="controls_section_label_view_width">60dp</dimen>
     <dimen name="extended_seek_bar_value_view_width">40dp</dimen>
+
+    <dimen name="interactive_image_view_demo_drawer_width">224dp</dimen>
 </resources>
