--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -40,4 +40,6 @@
         <attr name="zoomEnabled" />
         <attr name="interactivity" />
     </declare-styleable>
+
+    <declare-styleable name="DemoInteractiveImageView" />
 </resources>
