--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,6 @@
     <style name="InteractiveImageViewEx" parent="InteractiveImageView">
         <item name="android:scaleType">centerCrop</item>
     </style>
+
+    <style name="SeekBarLayout" parent="@android:style/Widget" />
 </resources>
