Split SeekBarLayout into AbsSeekBarLayout and FloatSeekBarLayout

--- a/app/src/main/res/layout/fragment_interactive_image_view_controls.xml
+++ b/app/src/main/res/layout/fragment_interactive_image_view_controls.xml
@@ -39,32 +39,36 @@
         android:layout_marginTop="@dimen/small_margin"
         android:entries="@array/scale_types" />
 
-    <com.codepunk.demo.SeekBarLayout
+    <com.codepunk.demo.FloatSeekBarLayout
         android:id="@+id/layout_seek_bar_pan_x"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/standard_margin"
-        android:label="@string/label_pan_x" />
+        android:label="@string/label_pan_x"
+        android:format="0%" />
 
-    <com.codepunk.demo.SeekBarLayout
+    <com.codepunk.demo.FloatSeekBarLayout
         android:id="@+id/layout_seek_bar_pan_y"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/standard_margin"
-        android:label="@string/label_pan_y" />
+        android:label="@string/label_pan_y"
+        android:format="0%" />
 
-    <com.codepunk.demo.SeekBarLayout
+    <com.codepunk.demo.FloatSeekBarLayout
         android:id="@+id/layout_seek_bar_scale_x"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/standard_margin"
-        android:label="@string/label_scale_x" />
+        android:label="@string/label_scale_x"
+        android:format="0.00" />
 
-    <com.codepunk.demo.SeekBarLayout
+    <com.codepunk.demo.FloatSeekBarLayout
         android:id="@+id/layout_seek_bar_scale_y"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/standard_margin"
-        android:label="@string/label_scale_y" />
+        android:label="@string/label_scale_y"
+        android:format="0.00" />
 
 </LinearLayout>
