--- a/app/src/main/res/layout/fragment_interactive_image_view_controls.xml
+++ b/app/src/main/res/layout/fragment_interactive_image_view_controls.xml
@@ -55,20 +55,54 @@
         android:label="@string/label_pan_y"
         android:format="0%" />
 
-    <com.codepunk.demo.FloatSeekBarLayout
-        android:id="@+id/layout_seek_bar_scale_x"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/standard_margin"
-        android:label="@string/label_scale_x"
-        android:format="0.00" />
+        android:layout_marginTop="@dimen/standard_margin">
 
-    <com.codepunk.demo.FloatSeekBarLayout
-        android:id="@+id/layout_seek_bar_scale_y"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/standard_margin"
-        android:label="@string/label_scale_y"
-        android:format="0.00" />
+        <ToggleButton
+            android:id="@+id/btn_lock"
+            android:layout_width="@dimen/touch_target_size"
+            android:layout_height="@dimen/touch_target_size"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:textOff=""
+            android:textOn=""
+            android:padding="@dimen/default_icon_in_touch_target_padding"
+            android:background="@android:color/transparent"
+            android:drawableTop="@drawable/ic_lock_white_24dp"
+            android:checked="true" />
+
+        <com.codepunk.demo.FloatSeekBarLayout
+            android:id="@+id/layout_seek_bar_scale_x"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/standard_margin"
+            android:layout_marginEnd="@dimen/standard_margin"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@id/btn_lock"
+            android:layout_toStartOf="@id/btn_lock"
+            android:label="@string/label_scale_x"
+            android:format="0.00" />
+
+        <com.codepunk.demo.FloatSeekBarLayout
+            android:id="@+id/layout_seek_bar_scale_y"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/standard_margin"
+            android:layout_marginEnd="@dimen/standard_margin"
+            android:layout_marginTop="@dimen/standard_margin"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/layout_seek_bar_scale_x"
+            android:layout_toLeftOf="@id/btn_lock"
+            android:layout_toStartOf="@id/btn_lock"
+            android:label="@string/label_scale_y"
+            android:format="0.00" />
+
+    </RelativeLayout>
 
 </LinearLayout>
