--- a/app/src/main/res/layout/activity_interactive_image_view_v5.xml
+++ b/app/src/main/res/layout/activity_interactive_image_view_v5.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.codepunk.demo.interactiveimageview.version5.NonInterceptingDrawerLayout
+<com.codepunk.demo.interactiveimageview.version5.DemoDrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_drawer"
@@ -35,4 +35,4 @@
 
     </FrameLayout>
 
-</com.codepunk.demo.interactiveimageview.version5.NonInterceptingDrawerLayout>
+</com.codepunk.demo.interactiveimageview.version5.DemoDrawerLayout>
