--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -45,4 +45,10 @@
         <item>Polynesian</item>
         <item>Gradient</item>
     </string-array>
+
+    <array name="zoom_pivots">
+        <item>0.0</item>
+        <item>0.33</item>
+        <item>1.0</item>
+    </array>
 </resources>
