--- a/app/src/main/res/layout/fragment_interactive_image_view_controls.xml
+++ b/app/src/main/res/layout/fragment_interactive_image_view_controls.xml
@@ -94,15 +94,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/standard_margin"
-        android:label="@string/label_center_x"
-        android:format="0%" />
+        android:label="@string/label_pivot_x"
+        android:format="0" />
 
     <com.codepunk.demo.FloatSeekBarLayout
         android:id="@+id/layout_seek_bar_center_y"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/standard_margin"
-        android:label="@string/label_center_y"
-        android:format="0%" />
+        android:label="@string/label_pivot_y"
+        android:format="0" />
 
 </LinearLayout>
