Removed 'interactivity' field, switched to standard setScrollEnabled/setScaleEnabled/etc. and removed all old versions

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -46,7 +46,7 @@
         <item>Gradient</item>
     </string-array>
 
-    <array name="zoom_pivots">
+    <array name="scale_pivots">
         <item>0.0</item>
         <item>1.0</item>
     </array>
