--- a/app/src/main/res/layout/activity_interactive_image_view_v7.xml
+++ b/app/src/main/res/layout/activity_interactive_image_view_v7.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.codepunk.demo.interactiveimageview.version7.DemoDrawerLayout
+<com.codepunk.demo.DemoDrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codepunk.demo.interactiveimageview.version7.InteractiveImageViewActivity">
+    tools:context="com.codepunk.demo.InteractiveImageViewActivity">
 
     <!-- The main content view -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.codepunk.demo.interactiveimageview.version7.DemoInteractiveImageView
+        <com.codepunk.demo.DemoInteractiveImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -34,8 +34,8 @@
             android:id="@+id/fragment_controls"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="com.codepunk.demo.interactiveimageview.version7.InteractiveImageViewControlsFragment" />
+            android:name="com.codepunk.demo.InteractiveImageViewControlsFragment" />
 
     </FrameLayout>
 
-</com.codepunk.demo.interactiveimageview.version7.DemoDrawerLayout>
+</com.codepunk.demo.DemoDrawerLayout>
