--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,29 +5,13 @@
         <attr name="interactiveImageViewStyle" format="reference" />
         <attr name="absSeekBarLayoutStyle" format="reference" />
 
-        <attr name="centerX" format="float" />
-        <attr name="centerY" format="float" />
         <attr name="clampedMax" format="integer" />
         <attr name="clampedMin" format="integer" />
-        <attr name="zoomPivots" format="reference" />
-        <attr name="panEnabled" format="boolean" />
-        <attr name="scaleX" format="float">
-            <enum name="auto" value="-1" />
-        </attr>
-        <attr name="scaleY" format="float">
-            <enum name="auto" value="-1" />
-        </attr>
-        <attr name="zoomEnabled" format="boolean" />
-        <attr name="interactivity">
-            <flag name="none" value="0" />
-            <flag name="scroll" value="1" />
-            <flag name="fling" value="2" />
-            <flag name="scale" value="4" />
-            <flag name="doubleTap" value="8"/>
-            <flag name="edgeEffects" value="16"/>
-            <flag name="all" value="31" />
-        </attr>
-        <attr name="range" format="integer" />
+
+        <attr name="scrollEnabled" format="boolean" />
+        <attr name="scaleEnabled" format="boolean" />
+        <attr name="doubleTapToScaleEnabled" />
+        <attr name="scalePivots" format="reference" />
     </declare-styleable>
 
     <declare-styleable name="CustomAppCompatSeekBar">
@@ -36,14 +20,11 @@
     </declare-styleable>
 
     <declare-styleable name="InteractiveImageView">
-        <attr name="centerX" />
-        <attr name="centerY" />
-        <attr name="interactivity" />
-        <attr name="panEnabled" />
-        <attr name="scaleX" />
-        <attr name="scaleY" />
-        <attr name="zoomEnabled" />
-        <attr name="zoomPivots" />
+        <attr name="scrollEnabled" />
+        <attr name="scaleEnabled" />
+        <attr name="android:overScrollMode" />
+        <attr name="doubleTapToScaleEnabled" />
+        <attr name="scalePivots" />
     </declare-styleable>
 
     <declare-styleable name="AbsSeekBarLayout">
@@ -52,7 +33,6 @@
         <attr name="android:min" />
         <attr name="android:max" />
         <attr name="android:format" />
-        <attr name="range" />
     </declare-styleable>
 
 </resources>
