--- a/app/src/main/res/layout/fragment_interactive_image_view_controls.xml
+++ b/app/src/main/res/layout/fragment_interactive_image_view_controls.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -9,7 +8,7 @@
     android:padding="@dimen/large_margin"
     android:background="@color/color_interactive_image_view_demo_drawer_color"
     android:clickable="true"
-    tools:context="com.codepunk.demo.interactiveimageview.version5.InteractiveImageViewControlsFragment"
+    tools:context="com.codepunk.demo.InteractiveImageViewControlsFragment"
     tools:ignore="KeyboardInaccessibleWidget">
 
     <TextView
