--- a/app/src/main/res/layout/activity_interactive_image_view.xml
+++ b/app/src/main/res/layout/activity_interactive_image_view.xml
@@ -2,6 +2,7 @@
 <com.codepunk.demo.DemoDrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,7 +17,7 @@
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:padding="0dp"
             android:cropToPadding="false"
             android:background="@android:color/darker_gray" />
