Updated TODO and comments looking for padding bug

--- a/app/src/main/res/layout/activity_interactive_image_view.xml
+++ b/app/src/main/res/layout/activity_interactive_image_view.xml
@@ -17,6 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
+            android:padding="30dp"
+            android:cropToPadding="true"
             android:background="@android:color/darker_gray" />
 
     </FrameLayout>
