--- a/app/src/main/res/layout/activity_interactive_image_view_2.xml
+++ b/app/src/main/res/layout/activity_interactive_image_view_2.xml
@@ -5,14 +5,14 @@
     android:id="@+id/layout_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codepunk.demo.InteractiveImageViewActivity">
+    tools:context="com.codepunk.demo.interactiveimageview2.InteractiveImageViewActivity">
 
     <!-- The main content view -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.codepunk.demo.DemoInteractiveImageView
+        <com.codepunk.demo.interactiveimageview2.DemoInteractiveImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -32,7 +32,7 @@
             android:id="@+id/fragment_controls"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="com.codepunk.demo.InteractiveImageViewControlsFragment" />
+            android:name="com.codepunk.demo.interactiveimageview2.InteractiveImageViewControlsFragment" />
 
     </FrameLayout>
 
