Renamed classes, got scroll & fling working

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -21,7 +21,7 @@
         <attr name="clampedMin" />
     </declare-styleable>
 
-    <declare-styleable name="InteractiveImageView">
+    <declare-styleable name="ImageViewInteractinator">
         <attr name="compatCropToPadding" />
         <attr name="doubleTapToScaleEnabled" />
         <attr name="flingEnabled" />
