--- a/app/src/main/res/layout/activity_image_view_interactinator.xml
+++ b/app/src/main/res/layout/activity_image_view_interactinator.xml
@@ -6,14 +6,14 @@
     android:id="@+id/layout_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codepunk.demo.interactiveimageview2.ImageViewInteractinatorActivity">
+    tools:context="com.codepunk.demo.ImageViewInteractinatorActivity">
 
     <!-- The main content view -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.codepunk.demo.interactiveimageview2.DemoImageViewInteractinator
+        <com.codepunk.demo.DemoImageViewInteractinator
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -37,7 +37,7 @@
             android:id="@+id/fragment_controls"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="com.codepunk.demo.interactiveimageview2.InteractinatorControlsFragment" />
+            android:name="com.codepunk.demo.InteractinatorControlsFragment" />
 
     </FrameLayout>
 
